# fsync

./: .gitignore  README.md  agent.md  config.example.toml  pyproject.toml
agent-docs/: design-1.1-bidirectional-sync.md  implementation-1.1-checklist.md  plan.md  status.md  verification.md  workflow.md  worklog.md
reports/: 2026-04-17-self-test-results.md  README.md  tdd-self-test.md
src/fsync/: __init__.py  __main__.py  bidir.py  cli.py  config.py  planner.py  scheduler.py  state.py  syncer.py
tests/: test_scheduler_bidir.py  test_syncer.py
tests/e2e/: helpers.py  test_cli_smoke.py
