[project]
name = "fsync"
version = "0.1.0"
description = "One-way file synchronization utility for scheduled backups."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
fsync = "fsync.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


